translation-tool/inputs/source_meta/objects/YAHS_ButtonFramework__mdt.object
<CustomObject>
    <description>This custom metadata type is used to drive the visibility of buttons.</description>
    <fields>
        <fullName>Action_Function__c</fullName>
        <description>To store the name of the action function that needs to be displayed.</description>
        <label>Action Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Title__c</fullName>
        <description>This will include the name of the label containing title of the button</description>
        <inlineHelpText>Please enter thename of the label containing title of the button</inlineHelpText>
        <label>Button Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Permission_Name__c</fullName>
        <description>This field will store the names of Custom Permission for which this button will be visible. pattern should be {Custom Permission}</description>
        <inlineHelpText>Please enter the Custom Permission names for which this button will be visible. You can enter multiple Custom Permission(Comma seperated values and it should be in the pattern: {Custom Permission 1},{Custom Permission 2}).</inlineHelpText>
        <label>Custom Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>This field will store the names of profiles for which this button will be visible. pattern should be {profile name}</description>
        <inlineHelpText>Please enter the profile names for which this button will be visible. You can enter multiple profiles(Comma seperated values and it should be in the pattern: {profile name 1},{profile name 2}).</inlineHelpText>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qyery_Params__c</fullName>
        <description>This field have all the params that need to be queried and replaced.</description>
        <inlineHelpText>Please fill the fields names that needs to be queried(comma separated values).</inlineHelpText>
        <label>Query Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>This field will include the record type developer names for which the button needs to be included. pattern: {recordtype1},{recordtype2}</description>
        <inlineHelpText>Please enter the record type developer names. pattern: {recordtype1},{recordtype2}</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>This will include the serial number of the section. Depending this section will be ordered.</description>
        <inlineHelpText>Please enter the number in the order you want to display the sections.</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Params__c</fullName>
        <description>This field will include the names of parameters that needs to be fetched from URL.</description>
        <inlineHelpText>Please enter  the name of parameters that needs to be fetched from URL.</inlineHelpText>
        <label>URL Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>This field will store the URL.</description>
        <inlineHelpText>Please enter url with static params and dynamic params. 
eg. YAHS_PRT_PP_AccountDetail?id=Id
OR 
Enter complete URL and mark complete URL as true.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>complete_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will store the Boolean value whether the url contains complete URL or some internal URL only with page name and parameters.</description>
        <label>complete URL</label>
        <type>Checkbox</type>
    </fields>
    <label>YAHS_ButtonFramework</label>
    <pluralLabel>YAHS_ButtonFrameworks</pluralLabel>
</CustomObject>